# email-triage-env-

./: Dockerfile  README (1).md  README.md  app (3).py  app.py  baseline.py  client.py  email_triage_env.py  inference (1).py  inference.py  openenv.yaml  pyproject (1).toml  pyproject (2).toml  pyproject.toml  requirements.txt
server/: app.py
