[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv environment for email triage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mamta"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]
